# py-interceptor

./: LICENSE  README.md  example.py  intercept.py  interceptor.py  pyproject.toml
examples/: example_rest_client.py  example_simple_api.py
src/interceptor/: __init__.py  interceptor.py
tests/: conftest.py  test_get_methods.py  test_interception_functions.py  test_method_interception.py
